# upysize

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
src/upy_size/: main.py
src/upy_size/strategies/: __init__.py  constants_no_const.py  keyword_arguments.py
src/upysize/strategies/: constants_local_only.py  function_inline.py  helpers.py  if_else_assignment.py  import_global_cache.py  import_one_function.py  import_type_only.py  keyword_arguments.py  local_cache_attribute.py  local_cache_global.py  small_classes.py
tests/: test_constants_local_only.py  test_constants_no_const.py  test_function_inline.py  test_helpers.py  test_import_global_cache.py  test_import_one_function.py  test_import_type_only.py  test_keyword_arguments.py  test_local_cache_attribute.py  test_local_cache_global.py  test_small_classes.py
